- non-blocking wait for key/confirm to workaround SDL bug (2024/01/03 MS)
- fixed more typos (2023/12/10 Jorge)

1.1.5:
- added gettext support for yes/no keys (2023/11/25 MS)
- added spanish translation (2023/11/18 Jorge)
- fixed comma typos (2023/11/18 Jorge)

1.1.4:
- bugfix: set correct fullscreen resolution for non-16:9 (2023/09/09 MS)
- fixed switched shrink/expand extras in editor (2023/09/05 MS)
- don't overwrite saved game when testing levels (2023/09/05 MS)
- properly fill new window with black (2023/09/05 MS)
- show viewport size if used on non-16:9 monitors (2023/09/05 MS)

1.1.3:
- fixed broken hiscores file check for disabled installation (2023/04/29 MS)
- updated config.guess (2023/04/29 MS)
- gettext argument set to external since now required (2023/04/29 MS)

1.1.2:
- mini game "Outbreak" now ends on appearance of 10th brick (2023/03/18 MS)
- show "Game Over" instead of congrats at end of mini game set (2023/02/18 MS)
- fixed memory violation in shine effect (2023/02/18 MS)
- use proper display settings for multiple monitors (2023/02/17 MS)
- properly link to libintl (2023/02/17 Dmitry Marakasov)
- properly install icons (2023/02/03 MS)
- use config directory as fallback for highscores (2023/01/28 MS)

1.1.1:
- added keyboard support for menu (2022/12/26 MS)
- added test functionality to editor (2022/12/24 MS)

1.1:
- added editor (2022/11/05 MS)
- added swedish translation (2022/07/22 Sanchez)

1.0.10:
- config option for setting directory for user-specific data (2022/04/23 MS)
- added french translation (2022/04/23 Pierre Faucillon)

1.0.9:
- fixed texture problem with old hardware (2022/03/02 MS)

1.0.8:
- fixed instant set selection in custom set dialog (2021/08/08 MS) 
- added paddle acceleration for keys/gamepad (2021/08/08 MS)
- added missing cross compiling stuff (2021/04/07 MS)

1.0.7:
- simplified cross compiling (2021/04/06 MS)
- added difficulty "very easy" (2021/04/04 MS)
- added gamepad support (2021/04/04 MS)