@@ -1,3 +1,4 @@
+- set fullscreen after creating window to prevent flickering (2024/01/13 MS)
 - non-blocking wait for key/confirm to workaround SDL bug (2024/01/03 MS)
 - fixed more typos (2023/12/10 Jorge)
 
